<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">Vögtle Wetter</string>
  <string name="app_name_freiburg">Freiburger Temperatur</string>
  <string name="app_name_paderborn">Paderborner Temperatur</string>
  <string name="app_name_bonn">Bonner Temperatur</string>
  <string name="city_paderborn">PB</string>
  <string name="city_freiburg">FR</string>
  <string name="city_bonn">BN</string>
  <string name="city_paderborn_full">Paderborn</string>
  <string name="city_freiburg_full">Freiburg</string>
  <string name="city_bonn_full">Bonn</string>
  <string name="temperature">Temperatur:</string>
  <string name="humidity">Luftfeuchtigkeit:</string>
  <string name="rain_last_hour">Regen 1h:</string>
  <string name="rain_today">Regen heute:</string>
  <string name="liter">l</string>
  <string name="freiburg_paderborn_bonn">Vergleich FR - PB - BN</string>
  <string name="data_mining">Auswertung in Google Tabellen</string>
  <string name="refresh">neu laden</string>
  <string name="update_intervall">Aktualisierungsintervall</string>
  <string name="update_summary">Frequenz mit der die Daten im Widget aktualisiert werden</string>
  <string name="action_preferences">Einstellungen</string>
  <string name="station_freiburg">Wetterstation in Freiburg</string>
  <string name="in_app">in der App anzeigen</string>
  <string name="in_widget">im Widget anzeigen</string>
  <string name="alert">Alarm aktivieren</string>
  <string name="station_paderborn">Wetterstation in Paderborn</string>
  <string name="station_bonn">Wetterstation in Bonn</string>
  <string name="action_reload">Neu laden</string>
  <string name="message_data_updated">Wetterdaten aktualisiert</string>
  <string name="message_data_update_failed">Fehler beim Abruf der Wetterdaten</string>
  <string name="data_overdue">Wetterdaten überfällig</string>
  <string name="since">seit</string>
  <string name="overdue">überfällig</string>
  <string name="minutes">Minuten</string>
  <string name="hours">Stunden</string>
  <string name="days">Tagen</string>
  <string name="action_7_days">7 Tage</string>
  <string name="action_summer_days">Sommertage</string>
  <string name="action_7_days_average">Durchschnitt</string>
  <string name="message_diagram_update_failed">Diagram Abruf fehlgeschlagen</string>
  <string name="action_diagrams">Diagramme</string>
  <string name="settings">Einstellungen</string>
  <string name="version">Version {v} Build {b}</string>
  <string name="version_info">Versionshinweis</string>
  <string name="rain_yesterday">Regen gestern:</string>
  <string name="rain_last_week">Regen letzte Woche:</string>
  <string name="rain_30_days">Regen letzte 30 Tage:</string>
  <string name="action_2_days">2 Tage</string>
  <string name="action_year">Jahresverlauf</string>
  <string name="action_last_year">Letztes Jahr</string>
  <string name="big_dot">●</string>
  <string name="intervall_changed">Update-Intervall:</string>
  <string name="update_deaktiviert">Widget wird nicht automatisch aktualisiert</string>
  <string name="action_winter_days">Wintertage</string>
  <string name="privileges">Berechtigung</string>
  <string name="secret">Code-Wort</string>
  <string name="inside_temperature">Raumtemperatur:</string>
  <string name="app_name_large">Vögtle Wetter XL</string>
</resources>
