<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:paddingTop="5dp"
                android:layout_marginTop="2dp"
                android:background="#71000000">
  <TextView android:id="@+id/weather_paderborn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="11sp"
            android:layout_alignParentLeft="true"
            android:text="@string/city_paderborn"/>
  <TextView android:id="@+id/weather_bonn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/weather_paderborn"
            android:paddingLeft="5dp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="11sp"
            android:layout_alignParentLeft="true"
            android:text="@string/city_bonn"/>
  <TextView android:id="@+id/weather_freiburg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/weather_bonn"
            android:paddingLeft="5dp"
            android:layout_marginBottom="2dp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="11sp"
            android:layout_alignParentLeft="true"
            android:text="@string/city_freiburg"/>
  <ImageButton android:id="@+id/refresh_button"
               android:layout_alignParentRight="true"
               android:layout_alignParentBottom="true"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:background="#20000000"
               android:scaleX="0.75"
               android:scaleY="0.75"
               android:scaleType="center"
               android:src="@drawable/reload"/>
</RelativeLayout>
